be able to pass any system property to the test runner + pass IPv4 preference by default